esp32_media_player/build/log/idf_py_stdout_output_8811
[1/11] Performing build step for 'bootloader'
[1/1] cd /home/dingjun/workspace/esp32/myesp/esp32_media_player/build/bootloader/esp-idf/esptool_py && /home/dingjun/.espressif/python_env/idf5.2_py3.8_env/bin/python /home/dingjun/workspace/esp32/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/dingjun/workspace/esp32/myesp/esp32_media_player/build/bootloader/bootloader.bin
Bootloader binary size 0x6850 bytes. 0x7b0 bytes (7%) free.
[2/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/src/AudioPlayer.cpp.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/src/AudioPlayer.cpp.obj 
/home/dingjun/.espressif/tools/xtensa-esp-elf/esp-13.2.0_20230928/xtensa-esp-elf/bin/xtensa-esp32-elf-g++  -DESP_PLATFORM -DIDF_VER=\"v5.2\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -Iconfig -I../main/include -I/home/dingjun/workspace/esp32/esp-idf/components/newlib/platform_include -I/home/dingjun/workspace/esp32/esp-idf/components/freertos/config/include -I/home/dingjun/workspace/esp32/esp-idf/components/freertos/config/include/freertos -I/home/dingjun/workspace/esp32/esp-idf/components/freertos/config/xtensa/include -I/home/dingjun/workspace/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/dingjun/workspace/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/dingjun/workspace/esp32/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/dingjun/workspace/esp32/esp-idf/components/freertos/esp_additions/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_hw_support/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_hw_support/include/soc -I/home/dingjun/workspace/esp32/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/dingjun/workspace/esp32/esp-idf/components/esp_hw_support/port/esp32/. -I/home/dingjun/workspace/esp32/esp-idf/components/heap/include -I/home/dingjun/workspace/esp32/esp-idf/components/log/include -I/home/dingjun/workspace/esp32/esp-idf/components/soc/include -I/home/dingjun/workspace/esp32/esp-idf/components/soc/esp32 -I/home/dingjun/workspace/esp32/esp-idf/components/soc/esp32/include -I/home/dingjun/workspace/esp32/esp-idf/components/hal/platform_port/include -I/home/dingjun/workspace/esp32/esp-idf/components/hal/esp32/include -I/home/dingjun/workspace/esp32/esp-idf/components/hal/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_rom/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_rom/include/esp32 -I/home/dingjun/workspace/esp32/esp-idf/components/esp_rom/esp32 -I/home/dingjun/workspace/esp32/esp-idf/components/esp_common/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_system/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_system/port/soc -I/home/dingjun/workspace/esp32/esp-idf/components/esp_system/port/include/private -I/home/dingjun/workspace/esp32/esp-idf/components/xtensa/esp32/include -I/home/dingjun/workspace/esp32/esp-idf/components/xtensa/include -I/home/dingjun/workspace/esp32/esp-idf/components/xtensa/deprecated_include -I/home/dingjun/workspace/esp32/esp-idf/components/lwip/include -I/home/dingjun/workspace/esp32/esp-idf/components/lwip/include/apps -I/home/dingjun/workspace/esp32/esp-idf/components/lwip/include/apps/sntp -I/home/dingjun/workspace/esp32/esp-idf/components/lwip/lwip/src/include -I/home/dingjun/workspace/esp32/esp-idf/components/lwip/port/include -I/home/dingjun/workspace/esp32/esp-idf/components/lwip/port/freertos/include -I/home/dingjun/workspace/esp32/esp-idf/components/lwip/port/esp32xx/include -I/home/dingjun/workspace/esp32/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/dingjun/workspace/esp32/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/dingjun/workspace/esp32/esp-idf/components/esp_http_client/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_event/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_https_ota/include -I/home/dingjun/workspace/esp32/esp-idf/components/bootloader_support/include -I/home/dingjun/workspace/esp32/esp-idf/components/bootloader_support/bootloader_flash/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_app_format/include -I/home/dingjun/workspace/esp32/esp-idf/components/fatfs/diskio -I/home/dingjun/workspace/esp32/esp-idf/components/fatfs/src -I/home/dingjun/workspace/esp32/esp-idf/components/fatfs/vfs -I/home/dingjun/workspace/esp32/esp-idf/components/wear_levelling/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_partition/include -I/home/dingjun/workspace/esp32/esp-idf/components/sdmmc/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/deprecated -I/home/dingjun/workspace/esp32/esp-idf/components/driver/analog_comparator/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/dac/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/gpio/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/gptimer/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/i2c/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/i2s/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/ledc/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/mcpwm/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/parlio/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/pcnt/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/rmt/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/sdio_slave/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/sdmmc/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/sigma_delta/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/spi/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/temperature_sensor/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/touch_sensor/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/twai/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/uart/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/usb_serial_jtag/include -I/home/dingjun/workspace/esp32/esp-idf/components/driver/touch_sensor/esp32/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_pm/include -I/home/dingjun/workspace/esp32/esp-idf/components/esp_ringbuf/include -I/home/dingjun/workspace/esp32/esp-idf/components/spiffs/include -mlongcalls -Wno-frame-address    -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fno-shrink-wrap -fmacro-prefix-map=/home/dingjun/workspace/esp32/myesp/esp32_media_player=. -fmacro-prefix-map=/home/dingjun/workspace/esp32/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu++2b -fno-exceptions -fno-rtti -std=gnu++14 -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/src/AudioPlayer.cpp.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/src/AudioPlayer.cpp.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/src/AudioPlayer.cpp.obj -c ../main/src/AudioPlayer.cpp
In file included from /home/dingjun/workspace/esp32/esp-idf/components/driver/deprecated/driver/i2s.h:23,
                 from ../main/src/AudioPlayer.cpp:3:
/home/dingjun/workspace/esp32/esp-idf/components/driver/deprecated/driver/adc.h:19:2: warning: #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively" [-Wcpp]
   19 | #warning "legacy adc driver is deprecated, please migrate to use esp_adc/adc_oneshot.h and esp_adc/adc_continuous.h for oneshot mode and continuous mode drivers respectively"
      |  ^~~~~~~
/home/dingjun/workspace/esp32/esp-idf/components/driver/deprecated/driver/i2s.h:27:2: warning: #warning "This set of I2S APIs has been deprecated, please include 'driver/i2s_std.h', 'driver/i2s_pdm.h' or 'driver/i2s_tdm.h' instead. if you want to keep using the old APIs and ignore this warning, you can enable 'Suppress leagcy driver deprecated warning' option under 'I2S Configuration' menu in Kconfig" [-Wcpp]
   27 | #warning "This set of I2S APIs has been deprecated, \
      |  ^~~~~~~
../main/src/AudioPlayer.cpp: In member function 'bool CAudioPlayer::initialize()':
../main/src/AudioPlayer.cpp:18:1: error: no return statement in function returning non-void [-Werror=return-type]
   18 | }
      | ^
../main/src/AudioPlayer.cpp: At global scope:
../main/src/AudioPlayer.cpp:20:6: error: no declaration matches 'void CAudioPlayer::play(const std::string&)'
   20 | void CAudioPlayer::play(const std::string& url) {
      |      ^~~~~~~~~~~~
In file included from ../main/src/AudioPlayer.cpp:1:
../main/include/AudioPlayer.hpp:14:10: note: candidate is: 'void CAudioPlayer::play(std::string&)'
   14 |     void play(std::string& url);
      |          ^~~~
../main/include/AudioPlayer.hpp:8:7: note: 'class CAudioPlayer' defined here
    8 | class CAudioPlayer {
      |       ^~~~~~~~~~~~
cc1plus: some warnings being treated as errors
[3/9] Building CXX object esp-idf/main/CMakeFiles/__idf_main.dir/src/MediaPlayer.cpp.obj
ninja: build stopped: subcommand failed.
